@@ -7,6 +7,7 @@ update-manager (1:0.93.18) intrepid; urgency=low
     - remove the landscape special handling again, its
       now installable again
     - fix log for kept packages
+    - make the log of the obsolete removal less verbose
   * DistUpgrade/ReleaseAnnouncement:
     - udpated for BETA
   
